--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -50,10 +50,138 @@ jobs:
       - name: "Validate composer.json"
         run: "composer validate --strict"
 
-  lint:
-    name: "Linting"
+  install:
+    name: "Install dependencies"
 
     needs: "validate"
+
+    runs-on: "${{ matrix.operating-system }}"
+
+    continue-on-error: ${{ matrix.experimental }}
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        operating-system:
+          - "ubuntu-20.04"
+          - "ubuntu-22.04"
+
+        php-version:
+          - "8.1"
+
+        dependencies:
+          - "highest"
+          - "lowest"
+
+        experimental: [false]
+
+        composer-options:
+          - ""
+
+        include:
+          - operating-system: "ubuntu-20.04"
+            php-version: "8.2"
+            dependencies: "highest"
+            experimental: true
+            composer-options: " --ignore-platform-reqs"
+          - operating-system: "ubuntu-20.04"
+            php-version: "8.2"
+            dependencies: "lowest"
+            experimental: true
+            composer-options: " --ignore-platform-reqs"
+          - operating-system: "ubuntu-22.04"
+            php-version: "8.2"
+            dependencies: "highest"
+            experimental: true
+            composer-options: " --ignore-platform-reqs"
+          - operating-system: "ubuntu-22.04"
+            php-version: "8.2"
+            dependencies: "lowest"
+            experimental: true
+            composer-options: " --ignore-platform-reqs"
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v3"
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@2.21.1"
+        with:
+          php-version: "${{ matrix.php-version }}"
+          extensions: "${{ env.PHP_EXTENSIONS }}"
+          ini-values: "${{ env.PHP_INI_VALUES }}"
+          coverage: "none"
+          tools: "${{ env.TOOLS }}"
+
+      - name: "Update dependencies with composer"
+        uses: "ramsey/composer-install@v1"
+        with:
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "${{ env.COMPOSER_OPTIONS }}${{ matrix.composer-options }}"
+
+      - name: "Check dependencies with composer"
+        run: "composer outdated --direct"
+
+  mega-lint:
+    name: "Linting with nvuillam/mega-linter"
+
+    needs: "install"
+
+    runs-on: "${{ matrix.operating-system }}"
+
+    continue-on-error: false
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        operating-system:
+          - "ubuntu-20.04"
+          - "ubuntu-22.04"
+
+        php-version:
+          - "8.1"
+
+        dependencies:
+          - "highest"
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v3"
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@2.21.1"
+        with:
+          php-version: "${{ matrix.php-version }}"
+          extensions: "${{ env.PHP_EXTENSIONS }}"
+          ini-values: "${{ env.PHP_INI_VALUES }}"
+          coverage: "none"
+          tools: "${{ env.TOOLS }}"
+
+      - name: "Update dependencies with composer"
+        uses: "ramsey/composer-install@v1"
+        with:
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "${{ env.COMPOSER_OPTIONS }}"
+
+      - name: "Linter"
+        # You can override Mega-Linter flavor used to have faster performances
+        # More info at https://nvuillam.github.io/mega-linter/flavors/
+        uses: "nvuillam/mega-linter/flavors/php@v6.1.0"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  php-lint:
+    name: "Linting with overtrue/phplint"
+
+    needs: "install"
 
     runs-on: "${{ matrix.operating-system }}"
 
@@ -87,82 +215,14 @@ jobs:
           tools: "${{ env.TOOLS }}"
 
       - name: "Lint PHP"
-        uses: "overtrue/phplint@8.0"
-
-  install:
-    name: "Install dependencies"
-
-    needs: "validate"
-
-    runs-on: "${{ matrix.operating-system }}"
-
-    continue-on-error: ${{ matrix.experimental }}
-
-    strategy:
-      fail-fast: false
-
-      matrix:
-        operating-system:
-          - "ubuntu-18.04"
-          - "ubuntu-20.04"
-          - "ubuntu-22.04"
-
-        php-version:
-          - "8.1"
-
-        dependencies:
-          - "highest"
-          - "lowest"
-
-        experimental: [false]
-
-        include:
-          - operating-system: "ubuntu-20.04"
-            php-version: "8.2"
-            dependencies: "highest"
-            experimental: true
-          - operating-system: "ubuntu-20.04"
-            php-version: "8.2"
-            dependencies: "lowest"
-            experimental: true
-          - operating-system: "ubuntu-22.04"
-            php-version: "8.2"
-            dependencies: "highest"
-            experimental: true
-          - operating-system: "ubuntu-22.04"
-            php-version: "8.2"
-            dependencies: "lowest"
-            experimental: true
-
-    steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v3"
-        with:
-          # Disabling shallow clone is recommended for improving relevancy of reporting
-          fetch-depth: 0
-
-      - name: "Install PHP"
-        uses: "shivammathur/setup-php@2.21.1"
-        with:
-          php-version: "${{ matrix.php-version }}"
-          extensions: "${{ env.PHP_EXTENSIONS }}"
-          ini-values: "${{ env.PHP_INI_VALUES }}"
-          coverage: "none"
-          tools: "${{ env.TOOLS }}"
-
-      - name: "Update dependencies with composer"
-        uses: "ramsey/composer-install@v1"
-        with:
-          dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "${{ env.COMPOSER_OPTIONS }}"
-
-      - name: "Check dependencies with composer"
-        run: "composer outdated --direct"
+        uses: "overtrue/phplint@8.1"
 
   php-cs-fixer:
     name: "Check Coding Standards with PHP-CS-Fixer"
 
-    needs: "lint"
+    needs:
+      - "mega-lint"
+      - "php-lint"
 
     runs-on: "${{ matrix.operating-system }}"
 
@@ -207,144 +267,100 @@ jobs:
       - name: "Run friendsofphp/php-cs-fixer"
         run: "vendor/bin/php-cs-fixer fix --dry-run --format=checkstyle | cs2pr"
 
-#  phpcs:
-#    name: "Check Coding Standards with PHPCS"
-#
-#    needs: "lint"
-#
-#    runs-on: "${{ matrix.operating-system }}"
-#
-#    continue-on-error: false
-#
-#    strategy:
-#      fail-fast: false
-#
-#      matrix:
-#        operating-system:
-#          - "ubuntu-20.04"
-#          - "ubuntu-22.04"
-#
-#        php-version:
-#          - "8.1"
-#
-#        dependencies:
-#          - "highest"
-#
-#    steps:
-#      - name: "Checkout"
-#        uses: "actions/checkout@v3"
-#        with:
-#          # Disabling shallow clone is recommended for improving relevancy of reporting
-#          fetch-depth: 0
-#
-#      - name: "Install PHP"
-#        uses: "shivammathur/setup-php@2.21.1"
-#        with:
-#          php-version: "${{ matrix.php-version }}"
-#          extensions: "${{ env.PHP_EXTENSIONS }}"
-#          ini-values: "${{ env.PHP_INI_VALUES }}"
-#          coverage: "none"
-#          tools: "${{ env.TOOLS }}, cs2pr"
-#
-#      - name: "Update dependencies with composer"
-#        uses: "ramsey/composer-install@v1"
-#        with:
-#          dependency-versions: "${{ matrix.dependencies }}"
-#          composer-options: "${{ env.COMPOSER_OPTIONS }}"
-#
-#      - name: "Run squizlabs/php_codesniffer"
-#        run: "vendor/bin/phpcs --report=checkstyle -q | cs2pr"
+  phpcs:
+    name: "Check Coding Standards with PHPCS"
 
-#  static-code-analysis:
-#    name: "Static Code Analysis with PHPStan"
-#
-#    needs: "lint"
-#
-#    runs-on: "${{ matrix.operating-system }}"
-#
-#    strategy:
-#      fail-fast: false
-#
-#      matrix:
-#        operating-system:
-#          - "ubuntu-20.04"
-#          - "ubuntu-22.04"
-#
-#        php-version:
-#          - "8.1"
-#
-#        dependencies:
-#          - "highest"
-#
-#    steps:
-#      - name: "Checkout"
-#        uses: "actions/checkout@v3"
-#        with:
-#          # Disabling shallow clone is recommended for improving relevancy of reporting
-#          fetch-depth: 0
-#
-#      - name: "Install PHP"
-#        uses: "shivammathur/setup-php@2.21.1"
-#        with:
-#          php-version: "${{ matrix.php-version }}"
-#          extensions: "${{ env.PHP_EXTENSIONS }}"
-#          ini-values: "${{ env.PHP_INI_VALUES }}"
-#          coverage: "none"
-#          tools: "${{ env.TOOLS }}"
-#
-#      - name: "Update dependencies with composer"
-#        uses: "ramsey/composer-install@v1"
-#        with:
-#          dependency-versions: "${{ matrix.dependencies }}"
-#          composer-options: "${{ env.COMPOSER_OPTIONS }}"
-#
-#      - name: "Run phpstan/phpstan"
-#        run: "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=768M --no-progress"
+    needs:
+      - "mega-lint"
+      - "php-lint"
 
-#  phpmd:
-#    name: "Check Rules with PHPMD"
-#
-#    needs: "lint"
-#
-#    runs-on: "${{ matrix.operating-system }}"
-#
-#    continue-on-error: false
-#
-#    strategy:
-#      fail-fast: false
-#
-#      matrix:
-#        operating-system:
-#          - "ubuntu-20.04"
-#          - "ubuntu-22.04"
-#
-#        php-version:
-#          - "8.1"
-#
-#        dependencies:
-#          - "highest"
-#
-#    steps:
-#      - name: "Checkout"
-#        uses: "actions/checkout@v3"
-#        with:
-#          # Disabling shallow clone is recommended for improving relevancy of reporting
-#          fetch-depth: 0
-#
-#      - name: "Install PHP"
-#        uses: "shivammathur/setup-php@2.21.1"
-#        with:
-#          php-version: "${{ matrix.php-version }}"
-#          extensions: "${{ env.PHP_EXTENSIONS }}"
-#          ini-values: "${{ env.PHP_INI_VALUES }}"
-#          coverage: "none"
-#          tools: "${{ env.TOOLS }}, phpmd"
-#
-#      - name: "Update dependencies with composer"
-#        uses: "ramsey/composer-install@v1"
-#        with:
-#          dependency-versions: "${{ matrix.dependencies }}"
-#          composer-options: "${{ env.COMPOSER_OPTIONS }}"
-#
-#      - name: "Run phpmd/phpmd"
-#        run: "phpmd src github phpmd.ruleset.xml"
+    runs-on: "${{ matrix.operating-system }}"
+
+    continue-on-error: false
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        operating-system:
+          - "ubuntu-20.04"
+          - "ubuntu-22.04"
+
+        php-version:
+          - "8.1"
+
+        dependencies:
+          - "highest"
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v3"
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@2.21.1"
+        with:
+          php-version: "${{ matrix.php-version }}"
+          extensions: "${{ env.PHP_EXTENSIONS }}"
+          ini-values: "${{ env.PHP_INI_VALUES }}"
+          coverage: "none"
+          tools: "${{ env.TOOLS }}, cs2pr"
+
+      - name: "Update dependencies with composer"
+        uses: "ramsey/composer-install@v1"
+        with:
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "${{ env.COMPOSER_OPTIONS }}"
+
+      - name: "Run squizlabs/php_codesniffer"
+        run: "vendor/bin/phpcs --report=checkstyle -q | cs2pr"
+
+  static-code-analysis:
+    name: "Static Code Analysis with PHPStan"
+
+    needs:
+      - "mega-lint"
+      - "php-lint"
+
+    runs-on: "${{ matrix.operating-system }}"
+
+    strategy:
+      fail-fast: false
+
+      matrix:
+        operating-system:
+          - "ubuntu-20.04"
+          - "ubuntu-22.04"
+
+        php-version:
+          - "8.1"
+
+        dependencies:
+          - "highest"
+
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v3"
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@2.21.1"
+        with:
+          php-version: "${{ matrix.php-version }}"
+          extensions: "${{ env.PHP_EXTENSIONS }}"
+          ini-values: "${{ env.PHP_INI_VALUES }}"
+          coverage: "none"
+          tools: "${{ env.TOOLS }}"
+
+      - name: "Update dependencies with composer"
+        uses: "ramsey/composer-install@v1"
+        with:
+          dependency-versions: "${{ matrix.dependencies }}"
+          composer-options: "${{ env.COMPOSER_OPTIONS }}"
+
+      - name: "Run phpstan/phpstan"
+        run: "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=768M --no-progress"
